# ooze

./: .gitignore  Cargo.toml  README.md  flake.nix  ooze.example.toml  ooze.toml
docs/: ci.md  config.md  cyclomatic-conventions.md  deferred-languages.md  onboarding.html  onboarding.md  running-mutants.md  spec.html
queries/bash/: branches.scm  functions.scm
queries/c/: branches.scm  functions.scm
queries/c_sharp/: as_expression_to_direct_cast.scm  branches.scm  checked_unchecked_swap.scm  default_literal_to_null.scm  functions.scm  is_pattern_negation.scm  null_forgiving_removal.scm  nullable_access_to_member_access.scm  nullish_coalescing_removal.scm  plus_to_minus.scm  remove_not.scm  remove_unary_minus.scm  return_boolean.scm  string_empty_literal.scm  swap_arithmetic.scm  swap_assignment.scm  ternary_arm_swap.scm  ternary_condition_negation.scm  throw_expression_to_null.scm
queries/cpp/: branches.scm  functions.scm
queries/dart/: branches.scm  functions.scm
queries/elixir/: branches.scm  functions.scm
queries/erlang/: branches.scm  functions.scm
queries/gleam/: branches.scm  functions.scm
queries/go/: branches.scm  functions.scm  integer_zero_one.scm  swap_boolean.scm
queries/haskell/: branches.scm  functions.scm
queries/hcl/: branches.scm  functions.scm
queries/java/: branches.scm  functions.scm
queries/javascript/: array-empty-literal.scm  branches.scm  functions.scm  includes-negation.scm  integer_zero_one.scm  negate_equality.scm  object-empty-literal.scm  optional-chaining-removal.scm  remove-not.scm  return_boolean.scm  string-empty-literal.scm  swap_boolean.scm  ternary_arm_swap.scm
queries/julia/: branches.scm  functions.scm
queries/lua/: branches.scm  functions.scm
queries/ocaml/: branches.scm  functions.scm
queries/php/: branches.scm  functions.scm
queries/python/: branches.scm  comparison-boundary.scm  comprehension_filter_removal.scm  dict-get-default-removal.scm  dict_get_to_index.scm  empty_collection_literal.scm  functions.scm  in_negation.scm  min_max_swap.scm  (+13 more)
src/: cli.rs  core.rs  doctor.rs  main.rs  probe.rs  scheduler.rs  selection.rs  source_path.rs
tests/: cli.rs
(+149 files in other folders)
