[package]
name = "ooze"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
lcov = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
streaming-iterator = "0.1"
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
