[package]
name = "ooze"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
lcov = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
streaming-iterator = "0.1"
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-dart = "0.2"
tree-sitter-elixir = "0.3"
tree-sitter-erlang = "0.19"
tree-sitter-gleam = "1.0"
tree-sitter-go = "0.25"
tree-sitter-haskell = "0.23"
tree-sitter-hcl = "1.1"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-julia = "0.23"
tree-sitter-lua = "0.5"
tree-sitter-ocaml = "0.25"
tree-sitter-php = "0.24"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-scala = "0.26"
tree-sitter-swift = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-zig = "1.1"
similar = "2"
tempfile = "3"
thiserror = "2"
walkdir = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
